REST-Service/deployment/base/flower/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: flower-app
  labels:
    app: flower-app
spec:
  to:
    kind: Service
    name: flower-app
    weight: 100
  port:
    targetPort: 5555-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
